--- a/risk_ranger/.env
+++ b/risk_ranger/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://safety_generalist:SierraTango84@127.0.0.1:5432/risk_ranger_db
-DB_NAME=risk_ranger_db
+DATABASE_URL=postgresql://safety_generalist:SierraTango84@127.0.0.1:5432/risk_ranger
+DB_NAME=risk_ranger
 DB_USER=safety_generalist
 DB_PASSWORD=SierraTango84
